CRUD with Redux - UPDATE, change API server

--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -48,6 +48,7 @@
     "position": "Position",
     "image": "Avatar profile",
     "role": "Role",
-    "save": "Save user"
+    "save": "Save user",
+    "edit" : "Edit user"
   }
 }
