--- a/Reactjs/src/translations/vi.json
+++ b/Reactjs/src/translations/vi.json
@@ -48,6 +48,7 @@
     "position": "Chức danh",
     "image": "Ảnh đại diện",
     "role": "Vai trò",
-    "save": "Lưu người dùng"
+    "save": "Lưu người dùng",
+    "edit": "Sửa thay đổi"
   }
 }
