--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -12,7 +12,7 @@
     "welcome": "Welcome "
   },
   "banner": {
-    "title1": "MEDICAL BACKGROUND",
+    "title1": "MEDICAL PLATFORM",
     "title2": "COMPREHENSIVE HEALTH CARE",
     "child1": "Specialized examination",
     "child2": "Remote examination",
@@ -49,6 +49,10 @@
     "image": "Avatar profile",
     "role": "Role",
     "save": "Save user",
-    "edit" : "Edit user"
+    "edit": "Edit user"
+  },
+  "homepage": {
+    "outstanding-doctor": "Outstanding Doctor",
+    "more-info":"View more"
   }
 }
