--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -57,5 +57,8 @@
   "homepage": {
     "outstanding-doctor": "Outstanding Doctor",
     "more-info": "View more"
+  },
+  "manage-schedule": {
+    "title": "Manage doctor's examination plan"
   }
 }
