--- a/Reactjs/src/translations/vi.json
+++ b/Reactjs/src/translations/vi.json
@@ -35,8 +35,8 @@
       "handbook": "Cẩm nang",
       "manage-handbook": "Quản lý cẩm nang"
     },
-    "doctor":{
-      "manage-schedule":"Quản lý kế hoạch khám bệnh"
+    "doctor": {
+      "manage-schedule": "Quản lý kế hoạch khám bệnh"
     }
   },
   "manage-user": {
@@ -56,6 +56,9 @@
   },
   "homepage": {
     "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
-    "more-info":"Xem thêm"
+    "more-info": "Xem thêm"
+  },
+  "manage-schedule": {
+    "title":"Quản lý kế hoạch khám bệnh của bác sĩ"
   }
 }
