--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -59,6 +59,9 @@
     "more-info": "View more"
   },
   "manage-schedule": {
-    "title": "Manage doctor's examination plan"
+    "title": "Manage doctor's examination plan",
+    "choose-doctor": "Choose doctor",
+    "choose-date": "Choose date",
+    "save": "Save user"
   }
 }
