--- a/Reactjs/src/translations/vi.json
+++ b/Reactjs/src/translations/vi.json
@@ -59,9 +59,17 @@
     "more-info": "Xem thêm"
   },
   "manage-schedule": {
-    "title":"Quản lý kế hoạch khám bệnh của bác sĩ",
-    "choose-doctor":"Chọn bác sĩ",
-    "choose-date":"Chọn ngày",
-    "save":"Lưu người dùng"
+    "title": "Quản lý kế hoạch khám bệnh của bác sĩ",
+    "choose-doctor": "Chọn bác sĩ",
+    "choose-date": "Chọn ngày",
+    "save": "Lưu người dùng"
+  },
+  "patient": {
+    "detail-doctor": {
+      "schedule": "Lịch khám",
+      "no-schedule": "Bác sĩ không có lịch hẹn trong thời gian này, vui lòng chọn thời gian khác",
+      "choose": "Chọn ",
+      "book-free": " và đặt (miễn phí)"
+    }
   }
 }
