--- a/Reactjs/src/translations/vi.json
+++ b/Reactjs/src/translations/vi.json
@@ -71,5 +71,14 @@
       "choose": "Chọn ",
       "book-free": " và đặt (miễn phí)"
     }
+  },
+  "admin": {
+    "manage-doctor": {
+      "title": "Tạo thêm thông tin doctors",
+      "choose-doctor": "Chọn bác sĩ",
+      "description": "Thông tin giới thiệu",
+      "add": "Tạo thông tin",
+      "save": "Lưu thông tin"
+    }
   }
 }
