--- a/Reactjs/src/translations/vi.json
+++ b/Reactjs/src/translations/vi.json
@@ -78,7 +78,13 @@
       "choose-doctor": "Chọn bác sĩ",
       "description": "Thông tin giới thiệu",
       "add": "Tạo thông tin",
-      "save": "Lưu thông tin"
+      "save": "Lưu thông tin",
+      "price": "Giá khám bệnh",
+      "payment": "Phương thức thanh toán",
+      "province": "Tỉnh thành",
+      "name-clinic": "Tên phòng khám",
+      "address-clinic": "Địa chỉ phòng khám",
+      "note": "Ghi chú"
     }
   }
 }
