--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -77,6 +77,20 @@
       "detail": "See details",
       "payment": "The patient can pay the cost in the form of: ",
       "hide-price": "Hide price list"
+    },
+    "booking-modal": {
+      "title": "Information to booking a medical appointment",
+      "fullName": "Full name",
+      "phoneNumber": "Phone number",
+      "email": "Email",
+      "address": "Address",
+      "reason": "Reasons for medical examination",
+      "birthday": "Date of birth",
+      "gender": "Gender",
+      "btnConfirm": "Confirm",
+      "btnCancel": "Cancel",
+      "priceBooking": "Free booking",
+      "price": "Price: "
     }
   },
   "admin": {
