--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -56,7 +56,8 @@
   },
   "homepage": {
     "outstanding-doctor": "Outstanding Doctor",
-    "more-info": "View more"
+    "more-info": "View more",
+    "specialty-popular": "Popular specialties"
   },
   "manage-schedule": {
     "title": "Manage doctor's examination plan",
@@ -105,7 +106,9 @@
       "province": "Provinces",
       "name-clinic": "Clinic's name",
       "address-clinic": "Clinic's address",
-      "note": "Note"
+      "note": "Note",
+      "specialty": "Specialty",
+      "select-clinic": "Clinic"
     }
   }
 }
